--- a/src/Components/Doctors/Doctors.css
+++ b/src/Components/Doctors/Doctors.css
@@ -36,7 +36,7 @@
 }
 .social-icons .fab{
     padding: 0 7px;
-    color: brown;
+    color: rgb(75, 175, 214);
 }
 .social-icons .fab:hover{
     padding: 0 7px;
