--- a/src/Components/Doctor-body/DoctorBody.css
+++ b/src/Components/Doctor-body/DoctorBody.css
@@ -9,3 +9,25 @@
     grid-template-columns: 1fr 2fr;
    
 }
+
+@media only screen and (max-width:768px){
+    body{
+        max-width: 100%;
+    }
+    .body-part{
+        display: flex;
+        flex-direction: column;
+}
+    .cart-style{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+}
+.cart-style div{
+    width: 100%;
+    
+}
+
+}
